--- a/src/main/resources/templates/articleView.html
+++ b/src/main/resources/templates/articleView.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <h2>Artykuł</h2>
-    <h2 th:text="${article.title}">Title</h2>
+    <h3>Artykuł "<span th:text="${article.title}" />"</h3>
     <p th:text="${article.article}">Article</p>
 </div>
 
