--- a/src/main/resources/templates/errorView.html
+++ b/src/main/resources/templates/errorView.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Error View</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
 <body>
 Error View
