--- a/src/main/resources/templates/logoutView.html
+++ b/src/main/resources/templates/logoutView.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Logout</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -50,6 +50,7 @@
     </style>
 </head>
 <body>
+
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -83,20 +84,15 @@
             <p><a href="#">Link</a></p> -->
         </div>
         <div class="col-sm-8 text-center">
-            <form action="login" th:action="@{/login}" th:method="post">
-                <div class="form-group">
-                    <label for="ligin">Login:</label>
-                    <input class="form-control" type="text" name="login" id="login" size="50" placeholder="login">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input class="form-control" type="password" name="password" id="password" size="50" placeholder="Password">
-                </div>
-                <!-- login: <input type="text" name="login"><br>
-                password: <input type="password" name="password"><br>
-                <input type="submit" value="login"> -->
-                <button type="submit" class="btn btn-default">Login</button>
+            <form action="logout" th:action="@{/logout}" method="post">
+                <input type="submit" value="logout">
             </form>
+
+            <!--
+            <form action="login" th:action="@{/login}" method="post">
+                <input type="submit" value="login">
+            </form>
+            -->
         </div>
         <div class="col-sm-2 sidenav">
             <!-- <div class="well">
