--- a/src/main/resources/templates/articlesView.html
+++ b/src/main/resources/templates/articlesView.html
@@ -11,6 +11,26 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
     <style>
+        html {
+            position: relative;
+            /*min-height: 100%;*/
+            min-height: 800px;
+            max-height: 800px;
+        }
+        body {
+            /* Margin bottom by footer height */
+            margin-bottom: 60px;
+        }
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            height: 60px;
+            line-height: 60px; /* Vertically center the text there */
+            background-color: #f5f5f5;
+        }
+
         /* Remove the navbar's default margin-bottom and rounded borders */
         .navbar {
             margin-bottom: 0;
@@ -29,15 +49,22 @@
             height: 100%;
         }
 
+        #mainText {
+            height: 700px; /* Set this height to the appropriate size */
+            overflow: scroll;
+        }
         /* Set black background color, white text and some padding */
-        footer {
+        /*footer {
             background-color: #555;
             color: white;
             padding: 15px;
-        }
+        }*/
+
+        /* Sticky footer styles -------------------------------------------------- */
+
 
         /* On small screens, set height to 'auto' for sidenav and grid */
-        @media screen and (max-width: 767px) {
+        /*@media screen and (max-width: 767px) {
             .sidenav {
                 height: auto;
                 padding: 15px;
@@ -46,7 +73,7 @@
             .row.content {
                 height: auto;
             }
-        }
+        } */
     </style>
 </head>
 <body>
@@ -82,7 +109,7 @@
             <p><a href="#">Link</a></p>
             <p><a href="#">Link</a></p> -->
         </div>
-        <div class="col-sm-8 text-left">
+        <div class="col-sm-8 text-left" id="mainText">
             <h2>Lista artykułów</h2>
             <table class="table table-hover table-striped">
                 <thead>
@@ -129,10 +156,15 @@
         </div>
     </div>
 </div>
-
-<footer class="container-fluid text-center">
-    <p>&copy; Klaudiusz Domagała 2018</p>
+<footer class="footer container-fluid text-center">
+    <div class="container">
+        <span class="text-muted">&copy; Klaudiusz Domagała 2018</span>
+    </div>
 </footer>
-
+<!--
+<footer class="container-fluid text-center">
+    <p></p>
+</footer>
+-->
 </body>
 </html>
