--- a/src/main/resources/templates/registerFormView.html
+++ b/src/main/resources/templates/registerFormView.html
@@ -4,34 +4,54 @@
     <meta charset="UTF-8">
     <title>Register Form View</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<form th:action="@{/register}" th:object = "${user}" th:method="post">
+<div th:insert="nav :: navigation"></div>
+<div class="container-fluid text-center">
+    <div class="row content">
+        <div class="col-sm-2 sidenav" th:insert="sideLeft :: sideLeft">
 
-    <label for="login">login</label>
-    <input id="login" type="text" th:field = "*{login}" />
-    <br>
+        </div>
+        <div class="col-sm-8 text-center">
 
-    <label for="name">name</label>
-    <input id="name" type="text" th:field = "*{name}" />
-    <br>
+            <form th:action="@{/register}" th:object="${user}" th:method="post">
 
-    <label for="password">password</label>
-    <input id="password" type="password" th:field = "*{password}" />
-    <br>
+                <label for="login">login</label>
+                <input id="login" type="text" th:field="*{login}"/>
+                <br>
 
-    <label for="role">role</label>
+                <label for="name">name</label>
+                <input id="name" type="text" th:field="*{name}"/>
+                <br>
 
-    <select id="role" th:field = "*{role}">
-        <option value="ROLE_USER">ROLE_USER</option>
-        <option value="ROLE_ADMIN">ROLE_ADMIN</option>
-    </select>
-    <br>
+                <label for="password">password</label>
+                <input id="password" type="password" th:field="*{password}"/>
+                <br>
 
-    <input type="submit" value = "Add" />
+                <label for="role">role</label>
 
-</form>
+                <select id="role" th:field="*{role}">
+                    <option value="ROLE_USER">ROLE_USER</option>
+                    <option value="ROLE_ADMIN">ROLE_ADMIN</option>
+                </select>
+                <br>
 
+                <input type="submit" value="Add"/>
+
+            </form>
+        </div>
+        <div class="col-sm-2 sidenav" th:insert="sideRight :: sideRight">
+
+        </div>
+    </div>
+</div>
+<div th:insert="footer :: copyright"></div>
 </body>
 </html>
