--- a/src/main/resources/templates/secretPage.html
+++ b/src/main/resources/templates/secretPage.html
@@ -4,17 +4,36 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<h1>Secret page</h1>
-<p>Moja karta kredytowa to: ???? !!!! #### $$$$</p>
-<p>Kod CVS: ABC</p>
+<div th:insert="nav :: navigation"></div>
+<div class="container-fluid text-center">
+    <div class="row content">
+        <div class="col-sm-2 sidenav" th:insert="sideLeft :: sideLeft">
+
+        </div>
+        <div class="col-sm-8 text-center">
+            <h1>Secret page</h1>
+            <p>Moja karta kredytowa to: ???? !!!! #### $$$$</p>
+            <p>Kod CVS: ABC</p>
 
 
-<form action="logmeout" th:action="@{/logmeout}" method="post">
-    <input type="submit" value="logmeout">
-</form>
+            <form action="logmeout" th:action="@{/logmeout}" method="post">
+                <input type="submit" value="logmeout">
+            </form>
+        </div>
+        <div class="col-sm-2 sidenav" th:insert="sideRight :: sideRight">
 
+        </div>
+    </div>
+</div>
+<div th:insert="footer :: copyright"></div>
 </body>
 </html>
