--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -36,6 +36,13 @@ body {
     height: 100%;
 }
 
+.panel {
+    border: 1px;
+    padding: 0 0 20px 0;
+    margin: 10px;
+    box-shadow: 0 20px 20px 0 #555555;
+}
+
 #mainText {
     height: 700px; /* Set this height to the appropriate size */
     overflow: scroll;
