--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -9,13 +9,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="#">Blog</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/viewAllArticles">Artcles</a></li>
+                <li><a href="/manage">Manage</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/register"><span class="glyphicon glyphicon-edit"></span> Register</a></li>
