--- a/src/main/resources/templates/articlesView.html
+++ b/src/main/resources/templates/articlesView.html
@@ -14,18 +14,23 @@
             <div class="row text-center">
                 <h2>Lista artykułów</h2>
             </div>
-            <div class="col-sm-4" th:each="article : ${articlesCol}">
-                <div class="panel panel-default">
-                    <a th:href="@{/viewArticle(id=${article.id})}">
-                        <div class="panel-heading">
-                            <h3 class="panel-title"><span th:text="${article.title}"></span></h3>
-                        </div>
-                        <div class="panel-body">
-                            <span th:text="${article.article}"></span>
-                        </div>
-                    </a>
+
+            <div class="row" th:each="article : ${articlesCol}">
+                <div class="col-sm-3">
+
+                    <div class="panel panel-default">
+                        <a th:href="@{/viewArticle(id=${article.id})}">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><span th:text="${article.title}"></span></h3>
+                            </div>
+                            <div class="panel-body">
+                                <span th:text="${article.article}"></span>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
+
         </div>
         <div class="col-sm-2 sidenav" th:insert="sideRight :: sideRight">
         </div>
