--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div th:insert="nav :: navigation"></div>
+<div th:replace="nav :: navigation"></div>
 <div class="container-fluid text-center">
     <div class="row content">
         <div class="col-sm-2 sidenav" th:insert="sideLeft :: sideLeft">
