blog z wykorzystaniem springa - działający, działa navbar, zapisywanie id autora, podział na template, zarządzanie artykułami przez autora, do dopracowania szata graficzna (już częściowo zrobione) i extrasy, zarządzanie artykułami przez administratora

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -43,6 +43,13 @@ body {
     box-shadow: 0 20px 20px 0 #555555;
 }
 
+.form {
+    border: 1px;
+    padding: 0 0 20px 0;
+    margin: 10px;
+    box-shadow: 0 20px 20px 0 #555555;
+}
+
 .equal {
     display: -webkit-flex;
     display: flex;
