--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -17,10 +17,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about"> About</a>
                 </li>
-
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="/viewAllArticles"> Artcles</a>
-                </li> -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarArticles" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Articles
@@ -28,11 +24,10 @@
                     <div class="dropdown-menu" aria-labelledby="navbarArticles">
                         <a class="dropdown-item" href="/viewMyArticles">View My Articles</a>
                         <a class="dropdown-item" href="/viewAllArticles">View All Articles</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/addArticle">Add Article</a>
                     </div>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="/manage"> Manage</a>
-                </li> -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarManage" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Manage
@@ -65,67 +60,6 @@
         </div>
     </div>
 
-    <!--
-    <button type="button" class="navbar-toggler" data-toggle="collapse"
-            data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">
-        Blog
-    </a>
-    <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="/">
-                    Home
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/about">
-                    About
-                </a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownArticles" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Articles
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownArticles">
-                    <a class="dropdown-item" href="/viewMyArticles">View my articles</a>
-                    <a class="dropdown-item" href="/viewAllArticles">View all articles</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdownManage" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Manage
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownManage">
-                    <a class="dropdown-item" href="/manageUserArticles">Manage my articles</a>
-                    <a class="dropdown-item" href="/manageAllArticles">Manage all articles</a>
-                </div>
-            </li>
-        </ul>
-        <ul class="navbar-nav navbar-right">
-            <li class="nav-item">
-                <a class="nav-link" href="/register">
-                    <span class="glyphicon glyphicon-edit"></span>
-                    Register
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/login">
-                    <span class="glyphicon glyphicon-log-in"></span>
-                    Login
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/logout">
-                    <span class="glyphicon glyphicon-log-out"></span>
-                    Logout
-                </a>
-            </li>
-        </ul>
-    </div>
-    -->
 </nav>
 </body>
 </html>
