--- a/src/main/resources/templates/articlesView.html
+++ b/src/main/resources/templates/articlesView.html
@@ -10,29 +10,52 @@
     <div class="row content">
         <div class="col-sm-2 sidenav" th:insert="sideLeft :: sideLeft">
         </div>
-        <div class="col-sm-8 text-left" id="mainText">
-            <div class="row text-center">
+        <div class="container-fluid col-sm-8 text-left" id="mainText">
+            <div class="col-sm-10 text-center">
                 <h2>Lista artykułów</h2>
             </div>
-
-            <div class="row" th:each="article : ${articlesCol}">
-                <div class="col-sm-3">
-
-                    <div class="panel panel-default">
-                        <a th:href="@{/viewArticle(id=${article.id})}">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><span th:text="${article.title}"></span></h3>
-                            </div>
-                            <div class="panel-body">
-                                <span th:text="${article.article}"></span>
-                            </div>
-                        </a>
-                    </div>
+            <div class="row">
+                <div class="panel panel-default col-sm-3 mx-4" th:each="article : ${articlesCol}">
+                    <a th:href="@{/viewArticle(id=${article.id})}">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><span th:text="${article.title}"></span></h3>
+                        </div>
+                        <div class="panel-body">
+                            <span th:text="${article.article}"></span>
+                        </div>
+                    </a>
                 </div>
-            </div>
 
-        </div>
-        <div class="col-sm-2 sidenav" th:insert="sideRight :: sideRight">
+            </div>
+            <!--
+            <div class="col-sm-12 container-fluid">
+                <table>
+                    <thead>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </thead>
+                    <tbody th:each="article : ${articlesCol}">
+                        <tr>
+                            <td>
+                                <div class="col-sm-5 panel panel-default">
+                                    <a th:href="@{/viewArticle(id=${article.id})}">
+                                        <div class="panel-heading">
+                                            <h3 class="panel-title"><span th:text="${article.title}"></span></h3>
+                                        </div>
+                                        <div class="panel-body">
+                                            <span th:text="${article.article}"></span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            -->
         </div>
     </div>
 </div>
