--- a/src/main/resources/templates/editArticleFormView.html
+++ b/src/main/resources/templates/editArticleFormView.html
@@ -14,25 +14,42 @@
 
         </div>
         <div class="col-sm-8 text-left">
-            <div class="row" th:object="${article}">
-                <form action="editArticle" th:action="@{/editArticle}" th:method="post">
-                    <div class="form-group">
-                        <label for="title">Title:</label>
-                        <input class="form-control" type="text" name="newTitle" id="newTitle"
-                               size="50" th:value="*{title}">
+            <div class="row">
+                <form class="form-horizontal" action="editArticle" th:action="@{/editArticle}" th:method="post">
+                    <div class="form-group row">
+                        <div class="col-sm-1 text-right">
+                            <label class="col-form-label" for="newTitle">Title:</label>
+                        </div>
+                        <div class="col-sm-11">
+                            <input class="form-control" type="text" name="newTitle" id="newTitle"
+                                   size="50" th:value="${article.title}">
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="article">Article:</label>
-                        <textarea class="form-control" name="newArticle" id="newArticle" rows="10" cols="50"
-                                  placeholder="Treść artykułu" th:text="*{article}">
-                    </textarea>
+                    <div class="form-group row">
+                        <div class="col-sm-1 text-right">
+                            <label class="col-form-label" for="newArticle">Article:</label>
+                        </div>
+                        <div class="col-sm-11">
+                            <textarea class="form-control" name="newArticle" id="newArticle" rows="10" cols="160"
+                                      placeholder="Treść artykułu" th:text="${article.article}">
+                                <!-- rows="10" cols="50" -->
+                            </textarea>
+                        </div>
                     </div>
-                    <div class="hidden">
-                        <input class="form-control" type="text" name="id" id="id"
-                               size="50" th:value="*{id}">
+                    <div class="form-group row">
+                        <div class="col-sm-1">
 
+                        </div>
+                        <div class="col-sm-11 text-left">
+                            <button type="submit" class="btn btn-default">Confirm</button>
+                        </div>
                     </div>
-                    <button type="submit" class="btn btn-default">Confirm</button>
+                    <div class="form-group">
+                        <div class="invisible">
+                            <input class="form-control" type="text" name="id" id="id"
+                                   size="50" th:value="${article.id}">
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
