--- a/src/main/resources/templates/loginFormView.html
+++ b/src/main/resources/templates/loginFormView.html
@@ -11,21 +11,36 @@
         <div class="col-sm-2 sidenav" th:insert="sideLeft :: sideLeft">
 
         </div>
-        <div class="col-sm-8 text-center">
-            <form action="login" th:action="@{/login}" th:method="post">
-                <div class="form-group">
-                    <label for="ligin">Login:</label>
-                    <input class="form-control" type="text" name="login" id="login" size="50" placeholder="login">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input class="form-control" type="password" name="password" id="password" size="50" placeholder="Password">
-                </div>
-                <!-- login: <input type="text" name="login"><br>
-                password: <input type="password" name="password"><br>
-                <input type="submit" value="login"> -->
-                <button type="submit" class="btn btn-default">Login</button>
-            </form>
+        <div class="col-sm-8">
+            <div class="container-fluid">
+                <form class="form-horizontal" action="login" th:action="@{/login}" th:method="post">
+                    <div class="form-group row">
+                        <div class="col-sm-1 text-right">
+                            <label class="col-form-label" for="login">Login:</label>
+                        </div>
+                        <div class="col-sm-11">
+                            <input class="form-control" type="text" name="login" id="login" size="50" placeholder="login">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-1 text-right">
+                            <label class="col-form-label" for="password">Password:</label>
+                        </div>
+                        <div class="col-sm-11">
+                            <input class="form-control" type="password" name="password" id="password"
+                                   size="50" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-1">
+
+                        </div>
+                        <div class="col-sm-11 text-left">
+                            <button type="submit" class="btn btn-default ml-0">Login</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
         <div class="col-sm-2 sidenav" th:insert="sideRight :: sideRight">
 
