--- a/src/main/resources/templates/manageArticleView.html
+++ b/src/main/resources/templates/manageArticleView.html
@@ -13,16 +13,26 @@
         </div>
         <div class="col-sm-8 text-left">
             <div class="row">
-                <h3>Artykuł "<span th:text="${article.title}" />"</h3>
-            </div>
-            <div class="row">
-                <p th:text="${article.article}">Article</p>
-            </div>
-            <div class="col-sm-2 col-sm-offset-1 button btn-default">
-                <a th:href="@{/editArticle(id=${article.id})}">Edit</a>
-            </div>
-            <div class="col-sm-2 col-sm-offset-1 button btn-default">
-                <a th:href="@{/deleteArticle(id=${article.id})}">Delete</a>
+                <div class="panel panel-default col-sm-10 mx-auto my-5">
+                    <div class="panel-heading">
+                        <h3 class="panel-title mx-2"><span th:text="${article.title}"></span></h3>
+                    </div>
+                    <div class="panel-body mx-2 text-justify">
+                        <span th:text="${article.article}"></span>
+                    </div>
+                    <div class="panel-footer">
+                        <a th:href="@{/editArticle(id=${article.id})}">
+                            <button type="button" class="btn btn-warning mx-2">Edit</button>
+                        </a>
+                        <span class="col-6 col-sm-offset-1"></span>
+                        <a th:href="@{/deleteArticle(id=${article.id})}">
+                            <button type="button" class="btn btn-danger mx-2">Delete</button>
+                        </a>
+                        <a th:href="@{/}">
+                            <button type="button" class="btn btn-secondary mx-2">Home</button>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-sm-2 sidenav" th:insert="sideRight :: sideRight">
